--- a/Stereograph.TechnicalTest.Api/appsettings.json
+++ b/Stereograph.TechnicalTest.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "MyConfig": {
+    "PathCSV": "C:\\Users\\Elias\\Desktop\\MyProjects\\technique\\TechnicalTestNetSkeleton\\Stereograph.TechnicalTest.Api\\Ressources\\Persons.csv"
   }
 }
