Modifier appsettings.json

--- a/Stereograph.TechnicalTest.Api/appsettings.json
+++ b/Stereograph.TechnicalTest.Api/appsettings.json
@@ -7,6 +7,6 @@
     }
   },
   "MyConfig": {
-    "PathCSV": "C:\\Users\\Elias\\Desktop\\MyProjects\\technique\\TechnicalTestNetSkeleton\\Stereograph.TechnicalTest.Api\\Ressources\\Persons.csv"
+    "PathCSV": "Ressources\\Persons.csv"
   }
 }
